@@ -37,7 +37,7 @@
 			<object class="NSWindowTemplate" id="266599386">
 				<int key="NSWindowStyleMask">15</int>
 				<int key="NSWindowBacking">2</int>
-				<string key="NSWindowRect">{{420, 300}, {600, 400}}</string>
+				<string key="NSWindowRect">{{420, 300}, {600, 412}}</string>
 				<int key="NSWTFlags">1681391616</int>
 				<string key="NSWindowTitle"/>
 				<string key="NSWindowClass">NSWindow</string>
@@ -72,7 +72,7 @@
 														<object class="NSOutlineView" id="1032857126">
 															<reference key="NSNextResponder" ref="760676701"/>
 															<int key="NSvFlags">4370</int>
-															<string key="NSFrameSize">{180, 376}</string>
+															<string key="NSFrameSize">{180, 388}</string>
 															<reference key="NSSuperview" ref="760676701"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="_NSCornerView" key="NSCornerView">
@@ -170,7 +170,7 @@
 															<float key="NSOutlineViewIndentationPerLevelKey">14</float>
 														</object>
 													</object>
-													<string key="NSFrameSize">{180, 376}</string>
+													<string key="NSFrameSize">{180, 388}</string>
 													<reference key="NSSuperview" ref="848776942"/>
 													<reference key="NSNextKeyView" ref="1032857126"/>
 													<reference key="NSDocView" ref="1032857126"/>
@@ -197,7 +197,7 @@
 													<double key="NSPercent">0.99319726228713989</double>
 												</object>
 											</object>
-											<string key="NSFrameSize">{180, 376}</string>
+											<string key="NSFrameSize">{180, 388}</string>
 											<reference key="NSSuperview" ref="487225562"/>
 											<reference key="NSNextKeyView" ref="760676701"/>
 											<int key="NSsFlags">528</int>
@@ -207,7 +207,7 @@
 											<bytes key="NSScrollAmts">QSAAAEEgAABBoAAAQaAAAA</bytes>
 										</object>
 									</object>
-									<string key="NSFrameSize">{180, 376}</string>
+									<string key="NSFrameSize">{180, 388}</string>
 									<reference key="NSSuperview" ref="1042687949"/>
 									<string key="NSClassName">NSView</string>
 								</object>
@@ -244,7 +244,7 @@
 																				<object class="NSTableView" id="546929068">
 																					<reference key="NSNextResponder" ref="603504539"/>
 																					<int key="NSvFlags">4370</int>
-																					<string key="NSFrameSize">{345, 89}</string>
+																					<string key="NSFrameSize">{345, 101}</string>
 																					<reference key="NSSuperview" ref="603504539"/>
 																					<bool key="NSEnabled">YES</bool>
 																					<object class="NSTableHeaderView" key="NSHeaderView" id="723228099">
@@ -257,7 +257,7 @@
 																					<object class="_NSCornerView" key="NSCornerView" id="923604608">
 																						<reference key="NSNextResponder" ref="522608439"/>
 																						<int key="NSvFlags">-2147483392</int>
-																						<string key="NSFrame">{{360, 0}, {16, 17}}</string>
+																						<string key="NSFrame">{{331, 0}, {16, 17}}</string>
 																						<reference key="NSSuperview" ref="522608439"/>
 																					</object>
 																					<object class="NSMutableArray" key="NSTableColumns">
@@ -377,7 +377,7 @@
 																					<int key="NSTableViewDraggingDestinationStyle">0</int>
 																				</object>
 																			</object>
-																			<string key="NSFrame">{{1, 17}, {345, 89}}</string>
+																			<string key="NSFrame">{{1, 17}, {345, 101}}</string>
 																			<reference key="NSSuperview" ref="522608439"/>
 																			<reference key="NSNextKeyView" ref="546929068"/>
 																			<reference key="NSDocView" ref="546929068"/>
@@ -387,11 +387,11 @@
 																		<object class="NSScroller" id="807484788">
 																			<reference key="NSNextResponder" ref="522608439"/>
 																			<int key="NSvFlags">-2147483392</int>
-																			<string key="NSFrame">{{360, 17}, {15, 19}}</string>
+																			<string key="NSFrame">{{331, 17}, {15, 9}}</string>
 																			<reference key="NSSuperview" ref="522608439"/>
 																			<reference key="NSTarget" ref="522608439"/>
 																			<string key="NSAction">_doScroller:</string>
-																			<double key="NSPercent">0.96153843402862549</double>
+																			<double key="NSPercent">0.91666666666666663</double>
 																		</object>
 																		<object class="NSScroller" id="876794921">
 																			<reference key="NSNextResponder" ref="522608439"/>
@@ -401,7 +401,7 @@
 																			<int key="NSsFlags">1</int>
 																			<reference key="NSTarget" ref="522608439"/>
 																			<string key="NSAction">_doScroller:</string>
-																			<double key="NSPercent">0.99416911602020264</double>
+																			<double key="NSPercent">0.95652173913043481</double>
 																		</object>
 																		<object class="NSClipView" id="856700717">
 																			<reference key="NSNextResponder" ref="522608439"/>
@@ -419,7 +419,7 @@
 																		</object>
 																		<reference ref="923604608"/>
 																	</object>
-																	<string key="NSFrame">{{18, 18}, {347, 107}}</string>
+																	<string key="NSFrame">{{18, 18}, {347, 119}}</string>
 																	<reference key="NSSuperview" ref="165862810"/>
 																	<reference key="NSNextKeyView" ref="603504539"/>
 																	<int key="NSsFlags">562</int>
@@ -431,11 +431,11 @@
 																	<bytes key="NSScrollAmts">QSAAAEEgAABBoAAAQaAAAA</bytes>
 																</object>
 															</object>
-															<string key="NSFrame">{{1, 1}, {383, 140}}</string>
+															<string key="NSFrame">{{1, 1}, {383, 152}}</string>
 															<reference key="NSSuperview" ref="284535001"/>
 														</object>
 													</object>
-													<string key="NSFrame">{{17, 16}, {385, 162}}</string>
+													<string key="NSFrame">{{17, 16}, {385, 174}}</string>
 													<reference key="NSSuperview" ref="1024484610"/>
 													<string key="NSOffsets">{0, 0}</string>
 													<object class="NSTextFieldCell" key="NSTitleCell">
@@ -701,7 +701,7 @@
 															<reference key="NSSuperview" ref="421970635"/>
 														</object>
 													</object>
-													<string key="NSFrame">{{18, 182}, {385, 174}}</string>
+													<string key="NSFrame">{{18, 194}, {385, 174}}</string>
 													<reference key="NSSuperview" ref="1024484610"/>
 													<string key="NSOffsets">{0, 0}</string>
 													<object class="NSTextFieldCell" key="NSTitleCell">
@@ -722,23 +722,23 @@
 													<bool key="NSTransparent">NO</bool>
 												</object>
 											</object>
-											<string key="NSFrameSize">{419, 376}</string>
+											<string key="NSFrameSize">{419, 388}</string>
 											<reference key="NSSuperview" ref="522515913"/>
 											<string key="NSClassName">BackgroundView</string>
 										</object>
 									</object>
-									<string key="NSFrame">{{181, 0}, {419, 376}}</string>
+									<string key="NSFrame">{{181, 0}, {419, 388}}</string>
 									<reference key="NSSuperview" ref="1042687949"/>
 									<int key="NSDividerStyle">2</int>
 								</object>
 							</object>
-							<string key="NSFrame">{{0, 24}, {600, 376}}</string>
+							<string key="NSFrame">{{0, 24}, {600, 388}}</string>
 							<reference key="NSSuperview" ref="697045175"/>
 							<bool key="NSIsVertical">YES</bool>
 							<int key="NSDividerStyle">2</int>
 						</object>
 					</object>
-					<string key="NSFrameSize">{600, 400}</string>
+					<string key="NSFrameSize">{600, 412}</string>
 					<reference key="NSSuperview"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
@@ -1806,9 +1806,9 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<integer value="1"/>
-					<string>{{421, 301}, {600, 400}}</string>
+					<string>{{421, 289}, {600, 412}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{421, 301}, {600, 400}}</string>
+					<string>{{421, 289}, {600, 412}}</string>
 					<boolean value="NO"/>
 					<boolean value="NO"/>
 					<boolean value="YES"/>
@@ -2221,6 +2221,13 @@
 					<string key="className">NSObject</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">ImageKit.framework/Headers/IKSaveOptions.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">ImageKit.framework/Headers/ImageKitDeprecated.h</string>
 					</object>
 				</object>
@@ -2249,6 +2256,13 @@
 					<string key="className">NSObject</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">PrintCore.framework/Headers/PDEPluginInterface.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">QuartzComposer.framework/Headers/QCCompositionParameterView.h</string>
 					</object>
 				</object>
@@ -2264,6 +2278,13 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">QuartzFilters.framework/Headers/QuartzFilterManager.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">QuickLookUI.framework/Headers/QLPreviewPanel.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -2290,7 +2311,7 @@
 		</object>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin.macosx</string>
-			<integer value="1050" key="NS.object.0"/>
+			<integer value="1060" key="NS.object.0"/>
 		</object>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin.InterfaceBuilder3</string>
