@@ -1,6 +1,10 @@
 ==2011-02==
 
 ==2011-01==
+* Added shader scanlines
+* Fixed vertical and horizontal centers
+* Moved barrel center from content center to canvas center
+* Implemented shader brightness clear color
 * Implemented OpenGL 2.0 shader
 * Fixed OpenGL context problem when closing an emulation.
 * Implemented frame communication to the canvas
